css/master.css
#jumbo-header {
  background: red;
  height: 500px;
  margin-bottom: 0;
}

#about-section {
  background: black;
  height: 500px;
}

#projects-section {
  background: red;
  height: 500px;
}

#contact-section {
  background: black;
  height: 500px;
}

#name-cont {
  background-color: #222222;
  text-align: center;
  position: fixed;
  left: 0;
  right: 0;
  padding-top: 65px;
}

h2 {
  color: white;
}

.centered {
  text-align: center;
}

.name {
  color: white;
  font-size: 70px !important;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.scroll-name {
  color: white;
  font-size: 40px !important;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
    color: red;
    font-size: 80px;
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@media (min-width: 768px) {
  .navbar {
    border: 0;
  }

  .navbar-nav {
    width: 100%;
    text-align: center;
  }

  .navbar-nav > li {
    float: none;
    display: inline-block;
  }

  .custom-nav {
    padding-top: 15px;
  }

}

@media (min-width: 562px) {
  #jumbo-header {
    padding-top: 250px;
  }
}

@media (max-width: 561px) {
  #jumbo-header {
    padding-top: 350px;
  }
}

